# vidianiv-jetson-nano-people-detector

./: README.md
computer-vision-on-single-board-computers/prototype/backend/recognizer/: .gitignore  README.md  pyproject.toml  setup.py
computer-vision-on-single-board-computers/prototype/backend/recognizer/ci/: clean.sh  envsetup.sh  install.sh
computer-vision-on-single-board-computers/prototype/backend/recognizer/notebook/: fasterrcnn_resnet50_fpn.ipynb  haarcascade.ipynb  hog-cv.ipynb  movement-detection.ipynb  yolo3.ipynb  yolo8.ipynb
computer-vision-on-single-board-computers/prototype/backend/recognizer/src/: __init__.py
computer-vision-on-single-board-computers/prototype/backend/recognizer/src/vidianiv_people_recognizer/api/: __init__.py  blackbox.py
computer-vision-on-single-board-computers/prototype/backend/recognizer/src/vidianiv_people_recognizer/core/: __init__.py  object.py  type.py
computer-vision-on-single-board-computers/prototype/backend/recognizer/src/vidianiv_people_recognizer/pipeline/: __init__.py  flow.py  pipeline.py
computer-vision-on-single-board-computers/prototype/backend/recognizer/src/vidianiv_people_recognizer/pipeline/capture/: cv.py  source.py
computer-vision-on-single-board-computers/prototype/backend/recognizer/src/vidianiv_people_recognizer/pipeline/input/: __init__.py  cv.py  source.py  type.py
computer-vision-on-single-board-computers/prototype/backend/recognizer/src/vidianiv_people_recognizer/pipeline/internal/: __init__.py  (+1 more)
computer-vision-on-single-board-computers/prototype/backend/recognizer/test/: sandbox.py
(+87 files in other folders)
