[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vidianiv_people_recognizer"
version = "0.0.1"
authors = [
  { name = "Victor Smirnov", email = "vityaman.dev@yandex.ru" },
]
description = "A package with people recognizer for vidianiv project."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Repository" = "https://gitlab.se.ifmo.ru/vidianiv/projects"
